--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>맵박스 빌드 테스트</title>  
+    <title>Add custom markers in Mapbox</title>  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
@@ -13,7 +13,7 @@
   
   <body>
    
-      <div id="mapContainer"></div>
+      <div id="map"></div>
           <div id="info-box">
               <h1>Information<br>Text+Image </h1>
             </div>
