🖼📟 Checkpoint ./script.js:32259713/4841 ./index.html:32259713/119

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
    
       <div id="map"></div>
           <div id="info-box">
-              <h1>Information<br>Text+Image </h1>
+              <h1 id="pd1">Information</h1>
+              <p id="pd2"></p>
             </div>
        </div>
                
