🐿🚟 Checkpoint ./index.html:55315810/108 ./style.css:55315810/70

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Add custom markers in Mapbox</title>  
+    <title>230923</title>  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
@@ -12,12 +12,12 @@
   </head>
   
   <body>
-      <div id="map"></div>
-    
-      <div id="info-box">
-        <h1 id="pd1">Information</h1>
-        <p id="pd2"></p>
-      </div>
+    <div id="map"></div>
+
+    <div id="info-box">
+      <h1 id="pd1">Information</h1>
+      <p id="pd2"></p>
+    </div>
                
   </body>
 </html>
