👕🍏 Checkpoint ./index.html:55315810/261 ./script.js:55315810/25

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="map"></div>
 
     <div id="info-box">
-      <h1 id="pd1">Information</h1>
-      <p id="pd2"></p>
+      <h1 id="info1">동네 이름</h1>
+      <p id="info2">동네에 대한 설명</p>
     </div>
                
   </body>
