😘🍥 Checkpoint ./style.css:55315810/220 ./script.js:55315810/326 ./index.html:55315810/201

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <div id="info-box">
       
         <div class="info-left">
-          <h1 id="info1">동네 이름</h1>
-          <p id="info2">동네에 대한 설명</p>        
+          <h2 id="address_sigu">시/구</h1>
+          <h1 id="address_dong">동</h1>
+          <p id="address_des">설명</p>        
         </div>
       
         <div class="info-right">
