🚥🌌 Checkpoint ./style.css:55315810/852 ./index.html:55315810/18

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       
         <div class="info-right">
-          <p>거주중인 자산가</p>
+          <h2>거주중인 자산가</h2>
           <div class="profile"> </div>
       </div>
       
