--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>230923</title>  
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
+
       
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
