--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="map"></div>
     
     <div class="header">
-      <div>프로젝트 이름</div>
+      <div class="project-title">프로젝트 이름</div>
+      <div class="project-info">정보</div>
     </div>
     
     <div id="info-box">
