--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       
         <div id="info-right">
-          <h2>거주중인 자산가</h2>
+          <div> 거주중인 자산가 </div>
           <div id="profile_grid">
             
             <div class="profile">
