--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       
         <div id="info-right">
-          <div class="right_title"> 거주중인 자산가 </div>
+          <p class="right_title"> 거주중인 자산가 </p>
           <div id="profile_grid">
             
             <div class="profile">
