🙇🏁 Checkpoint ./index.html:55315810/388 ./style.css:55315810/1045

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div id="info-box">
 
         <div id="info-left">
-          <h2 id="address_sigu"> 시/구 </h1>
-          <h1 id="address_dong"> 동 </h1>
-          <p id="address_des"> 설명 </p>        
+          <div id="address_sigu"> 시/구 </div>
+          <div id="address_dong"> 동 </div>
+          <div id="address_des"> 설명 </div>        
         </div>
       
         <div id="info-right">
-          <p class="right_title"> 거주중인 자산가 </p>
+          <div class="right_title"> 거주중인 자산가 </div>
           <div id="profile_grid">
             
             <div class="profile">
