📯👛 Checkpoint ./script.js:55315810/116 ./style.css:55315810/662 ./index.html:55315810/75

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
       
         <div id="info-right">
+          <div> </div>
           <div class="right_title"> 거주중인 자산가 </div>
           <div id="profile_grid">
             
