🐊🐩 Checkpoint ./index.html:55315810/177 ./style.css:55315810/288 ./script.js:55315810/128

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div id="map"></div>
     
-    <
+    <div class="controller"> 화살표 </div>
     
-    <div class="header">
+    <div id="header">
       <div class="project-title"> 풍수지리로 보는 부촌 </div>
       <div class="project-info"> 정보 </div>
     </div>
