👟👡 Checkpoint ./script.js:55315810/313 ./style.css:55315810/140 ./index.html:55315810/18 ./dong_polygon_test.geojson:55315810/73854 ./dong_polygon.geojson:55315810/166647

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="controller"> 화살표 </div>
     
     <div id="header">
-      <div class="project-title"> 풍수지리로 보는 부촌 </div>
-      <div class="project-info"> 정보 </div>
+      <div id="project-title"> 풍수지리로 보는 부촌 </div>
+      <div id="project-info"> 정보 </div>
     </div>
     
     <div id="info-box">
