👖💺 Checkpoint ./script.js:55315810/492 ./index.html:55315810/287 ./style.css:55315810/931

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
     <div id="map"></div>
     
-    <div class="controller"> 화살표 </div>
+    <div id="ctl_left"> 이전 </div>
+    <div id="ctl_right"> 다음 </div>
     
     <div id="header">
       <div id="project-title"> 풍수지리로 보는 부촌 </div>
