⚡️🌒 Checkpoint ./script.js:55315810/1944 ./index.html:55315810/85

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <div id="ctl_left"> 이전 </div>
     <div id="ctl_right"> 다음 </div>
+    <div id="home"> 홈 </div>
     
     <div id="header">
       <div id="project-title"> 풍수지리로 보는 부촌 </div>
