🎱🦂 Checkpoint ./style.css:55315810/488 ./script.js:55315810/17 ./index.html:55315810/238

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   
   <body>
     <div id="map"></div>
+<!--     <i id="ctl_left" class="fa-solid fa-arrow-left"></i>
+    <i id="ctl_right" class="fa-solid fa-arrow-right"></i> -->
     <button id="ctl_left"> <i class="fa-solid fa-arrow-left"></i> </button>
-    <button id="ctl_right"> <i class="fa-solid fa-arrow-right"></i> </button>
+    <button id="ctl_right"> <i class="fa-solid fa-arrow-left"></i> </button>
     <div id="home"> 홈 </div>
     
     <div id="header">
