--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js"></script>
-    <script src="https://kit.fontawesome.com/d6476a7277.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3841f068e0.js" crossorigin="anonymous"></script>    
     <script>
       (function(d) {
         var config = {
@@ -29,8 +29,8 @@
     <div id="map"></div>
 <!--     <i id="ctl_left" class="fa-solid fa-arrow-left"></i>
     <i id="ctl_right" class="fa-solid fa-arrow-right"></i> -->
-    <button id="ctl_left"> <i class="fa-solid fa-arrow-left"></i> </button>
-    <button id="ctl_right"> <i class="fa-solid fa-arrow-left"></i> </button>
+    <div id="ctl_left"> <i class="fa-solid fa-arrow-left fa-2xl"></i> </div>
+    <div id="ctl_right"> <i class="fa-solid fa-arrow-right fa-2xl"></i> </div>
     <div id="home"> 홈 </div>
     
     <div id="header">
