--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <i id="ctl_right" class="fa-solid fa-arrow-right"></i> -->
     <div id="ctl_left"> <i class="fa-solid fa-arrow-left fa-2xl"></i> </div>
     <div id="ctl_right"> <i class="fa-solid fa-arrow-right fa-2xl"></i> </div>
-    <div id="home"> 홈 </div>
+    <div id="home"> <i id="home_x" class="fa-solid fa-xmark fa-2xl"></i> </div>
     
     <div id="header">
       <div id="project-title"> 풍수지리로 보는 부촌 </div>
