--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div id="ctl_left"> <i class="fa-solid fa-arrow-left fa-2xl"></i> </div>
     <div id="ctl_right"> <i class="fa-solid fa-arrow-right fa-2xl"></i> </div>
     <div id="home"> <i id="home_x" class="fa-solid fa-xmark fa-2xl"></i> </div>
+<!--     <div id="home"> <i id="home_x" class="fa-solid fa-map fa-2xl"></i> </div> -->
     
     <div id="header">
       <div id="project-title"> 풍수지리로 보는 부촌 </div>
