🚀🌇 Checkpoint ./index.html:55315810/501

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div id="profile_grid">
             
             <div class="profile">
-              <div class="pict">  </div>
+              <div class="pict"> <img src="https://www.w3schools.com/whatis/img_js.png"> </div>
               <div class="name"> 이름 </div>
             </div>
             
