--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="header">
       <div id="project-title"> 풍수지리로 보는 부촌 </div>
       <div id="project-info"> 소개 </div>
-      <div id="home"> <i id="home_x" class="fa-solid fa-xmark fa-2xl"></i> </div>
+<!--       <div id="home"> <i id="home_x" class="fa-solid fa-xmark fa-2xl"></i> </div> -->
     </div>
     
     <div id="info-box">
