⛴🍞 Checkpoint ./script.js:55315810/28 ./index.html:55315810/191

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div id="header">
       <div id="project-title"> 풍수지리로 보는 부촌 </div>
       <div id="project-info"> 소개 </div>
-<!--       <div id="home"> <i id="home_x" class="fa-solid fa-xmark fa-2xl"></i> </div> -->
+      <div id="info-popup">
+        
+      </div>
     </div>
     
     <div id="info-box">
