⛪️☎️ Checkpoint ./style.css:55315810/1130 ./index.html:55315810/8 ./.glitch-assets:55315810/827

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="info-popup">
       <div id="popup-x"> <i class="fa-solid fa-xmark fa-xl"></i> </div>
       <h2 class="popup-h"> 풍수지리에 대하여 </h2>
-      <div class="popup-png"> </div>
+      <div class="popup-img"> </div>
       <p class="popup-p"> 소개글 </p>
     </div>
     
