🍙🎉 Checkpoint ./style.css:55315810/100 ./index.html:55315810/2352

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <p class="popup-p"> 소개글 </p>
     </div>
     
-    <div id="info-box">
-
+    <div class="bottom">
+      <div id="info-box">
         <div id="info-left">
           <div id="address_sigu"> 시/구 </div>
           <div id="address_dong"> 동 </div>
@@ -58,7 +58,9 @@
               </div>           -->
           </div>
         </div>
+    </div>      
     </div>
+
   
                
   </body>
