🛳🐊 Checkpoint ./style.css:55315810/1138 ./index.html:55315810/316 ./dong_polygon.geojson:55315810/52

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     
     <div id="info-box">
         <div id="info-left">
-          <div id="address_sigu"> 시/구 </div>
-          <div id="address_dong"> 동 </div>
+          <div class="adress">
+            <div id="address_sigu"> 시/구 </div>
+            <div id="address_dong"> 동 </div>            
+          </div>
           <div id="address_des"> 설명 </div>        
         </div>
       
