🍏🏣 Checkpoint ./style.css:55315810/1264 ./index.html:55315810/265

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js"></script>  
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=block" rel="stylesheet">
     <script>
       (function(d) {
         var config = {
