--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
       <div id="popup-x"> <i class="fa-solid fa-xmark fa-xl"></i> </div>
       <h2 class="popup-h"> 풍수지리에 대하여 </h2>
       <div class="popup-img"> </div>
-      <p class="popup-p"> 소개글 </p>
+      <p class="popup-p"> 
+        한국의 풍수지리의 기본개념은 땅의 형세를 인간의 길흉화복에 관련시켜 설명하는 자연관의 하나이다. 자산가들은 땅이나 건물을 살 때 풍수지리를 따진다. 이왕이면 기후, 풍향, 물길 등을 파악해 좀 더 건강하고 안락하게 살아갈 터를 찾기 위해서다. 
+        <br> <br> 
+        풍수지리 사상에 따른 명당은 좌청룡, 우백호로 개념 지워진 산줄기로 둘러싸여 있으며, 그 사이로 하천이 흐르는 배산임수의 여건을 갖춘 곳이다. 배산임수는 예전부터 풍수 명당의 기본 조건으로 뒤의 산은 집에 생기를 불어넣고 앞의 물은 땅의 기운을 모이게 하는 역할을 하는 것으로 알려졌다.      </p>
     </div>
     
     <div id="info-box">
