--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <div id="info-popup">
       <div id="popup-x"> <i class="fa-solid fa-xmark fa-xl"></i> </div>
-      <h2 class="popup-h"> 풍수지리에 대하여 </h2>
+      <h2 class="popup-h"> ▪︎ 풍수지리에 대하여 </h2>
       <div class="popup-img"> </div>
       <p class="popup-p"> 
         한국의 풍수지리의 기본개념은 땅의 형세를 인간의 길흉화복에 관련시켜 설명하는 자연관의 하나이다. 자산가들은 땅이나 건물을 살 때 풍수지리를 따진다. 이왕이면 기후, 풍향, 물길 등을 파악해 좀 더 건강하고 안락하게 살아갈 터를 찾기 위해서다. 
