🌦🏓 Checkpoint ./index.html:55315810/180

--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@
         <div id="info-right">
           <div> </div>
           <div class="right_title"> 거주중인 자산가 </div>
-          <div id="profile_grid">
-<!--              <div class="profile">
-                <img class="pict" src="--.png">
-                <div class="name"> 이름 </div>
-              </div>           -->
-          </div>
+          <div id="profile_grid"> </div>
         </div>
     </div>      
 
